--- a/views/web-app.pug
+++ b/views/web-app.pug
@@ -39,7 +39,7 @@ html
                         md-tab-label Slack
                         md-tab-body
                             md-content(layout-padding)
-                                a(href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands&client_id="+slack_client_id)
+                                a(href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands&redirect_uri="+slack_redirect_url+"&client_id="+slack_client_id)
                                     img(alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x")
                             
                             md-content
