removed library icons

--- a/src/public/css/ah-tm.tags.css
+++ b/src/public/css/ah-tm.tags.css
@@ -97,7 +97,7 @@ input.search-tool {
 }
 
 md-icon.search-tool {
-    padding-top: 20px;
+    margin-top: 20px;
 }
 
 md-input-container.search-tool {
